fixed library loading overflow scrollbar issue

--- a/style.scss
+++ b/style.scss
@@ -485,6 +485,7 @@ header nav {
 
 #library-search {
 	position: relative;
+	overflow: hidden;
 	min-height: 500px;
 
 
